--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '13.x'
+      - run: npm install
       - run: npm run lint
