--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
+    "sass-lint": "^1.13.1",
     "typescript": "^3.7.3"
   },
   "dependencies": {
