--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore ./src --ext ts --ext tsx --ext js",
-    "sasslint": "sass-lint -c .sass-lint.yml '**/*.sass' -v -q"
+    "sasslint": "sass-lint -c .sass-lint.yml '**/*.sass' -v"
   },
   "repository": {
     "type": "git",
