--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -23,11 +23,8 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    - name: Lint
+    - name: ESLint
       run: npm run lint
-
-    - name: SASS Lint
-      run: npm run sasslint
   sass:
     runs-on: ubuntu-latest
 
@@ -52,4 +49,3 @@ jobs:
 
     - name: SASS Lint
       run: npm run sasslint
-          
