--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -15,10 +15,13 @@
 
 files:
     include: '**/*.sass'
-    options:
-      formatter: stylish
-      merge-default-rules: false
-  # rules:
+options:
+  formatter: stylish
+  merge-default-rules: false
+rules:
+  indentation:
+    - 1
+    - size: 2
   #   bem-depth:
   #     - 0
   #     - max-depth: 1
@@ -59,9 +62,6 @@ files:
   #   id-name-format:
   #     - 1
   #     - convention: hyphenatedlowercase
-  #   indentation:
-  #     - 1
-  #     - size: 2
   #   leading-zero:
   #     - 1
   #     - include: false
