--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-  "name": "eslint-action",
-  "version": "1.0.0",
-  "description": "ESLint Action Test",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint --ignore-path .gitignore ./src --ext ts --ext tsx --ext js",
-    "sasslint": "sass-lint -c .sass-lint.yml '**/*.sass' -v"
-  },
+  "name": "design-system",
+  "version": "0.0.0",
+  "private": "true",
+  "description": "Mural Design System monorepo",
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yusinto/github-actions-demo.git"
+    "url": "git+https://github.com/tactivos/design-system.git"
   },
-  "author": "Yusinto Ngadiman",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yusinto/github-actions-demo/issues"
+  "dependencies": {
+    "lerna": "^3.22.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "eslint": "^6.7.2",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
     "prettier": "^1.19.1",
     "sass-lint": "^1.13.1",
     "typescript": "^3.7.3"
-  },
-  "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
   }
 }
